--- a/admin.html
+++ b/admin.html
@@ -21,9 +21,11 @@
         </ul>
       </nav>
     </header>
+    <div id="video-upload-section">
     <h1>Video Upload</h1>
     <input type="text" id="youtube-link" placeholder="Paste YouTube link" />
     <button id="upload-button">Upload Video</button>
+    </div>
 
     <!-- Rest of your HTML -->
   </body>
