--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
     </header>
-    <div id="video-upload-section">
+    <div>
     <h1>Video Upload</h1>
     <input type="text" id="youtube-link" placeholder="Paste YouTube link" />
     <button id="upload-button">Upload Video</button>
